# glioblastom-multiforme-ssa

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
00_Control_CENTER/: GITHUB_STRATEGY.md  GLOBAL_CLAUDE.md  MASTER_PLAN.md  PERSONAL_POSITIONING.md  PORTFOLIO_STRUCTURE.md  PROJECT_PIPELINE.md  repo_CLAUDE_template.md
04_CLAUDE_SYSTEM/: GLOBAL_CLAUDE.md  repo_CLAUDE_template.md
04_CLAUDE_SYSTEM/checklists/: PRIVACY_RELEASE_CHECKLIST.md  README_QUALITY_RUBRIC.md  REPO_AUDIT_CHECKLIST.md
04_CLAUDE_SYSTEM/prompts/: CLAUDE_CODE_STARTER_PROMPTS.md
04_CLAUDE_SYSTEM/skills/: SKILL_academic-code-cleanup.md  SKILL_github-profile-strategist.md  SKILL_portfolio-project-upgrader.md  SKILL_repo-auditor.md  SKILL_visual-portfolio-designer.md
04_CLAUDE_SYSTEM/templates/: GITHUB_PROFILE_README_TEMPLATE.md  PORTFOLIO_CASE_STUDY_TEMPLATE.md  PROJECT_TRACKER.md
configs/: default.yaml
configs/scenarios/: no_therapy.yaml  radiotherapy.yaml  stupp.yaml  tmz.yaml
docs/: assumptions.md  model_specification.md  v1_specification.md
references/: LITERATURE_UPDATE_PLAN.md
references/markdown_summaries/: Alfonso_2017.md  Baar_2016.md  Baar_2016_SI.md  Blath_2023.md  Conte_Surulescu_2021.md  Dwivedi_2023_game_theory.md  INDEX.md  Kraut_2021.md  Lan_2017_nature23666.md  Oliveira_2017_go_or_grow.md  Venkataramani_2022.md
scripts/: run_baseline.py  run_comparison.py
src/gbm_ctmc/: __init__.py  gillespie.py  parameters.py  states.py  transitions.py
tests/: conftest.py
tests/unit/: test_gillespie.py  test_io_and_plotting.py  test_parameters.py  (+9 more)
(+15 files in other folders)
