[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbm-ctmc"
version = "0.1.0"
description = "Stochastic glioblastoma therapy simulation via continuous-time Markov chains"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gbm_ctmc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
